--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -67,8 +67,8 @@
   border-color: var(--button-gray);
   border-width: 3px;
   font-size: 0;
-  border-left-color: var(--button-gray);
-  animation: rotating 2s 0.25s linear infinite;
+  border-left-color: var(--button-green);
+  animation: rotating 1s 0.25s linear infinite;
 
   &:after {
     content: "";
