Improve the login page

--- a/src/componenets/Login/Login.scss
+++ b/src/componenets/Login/Login.scss
@@ -37,6 +37,12 @@
     .inputs {
       width: 75%;
 
+      label {
+        padding-bottom: 1em;
+        padding-top: 1em;
+        display: block;
+        color: var(--blue)
+      }
       input {
         margin-bottom: .25em;
         width: 100%;
