--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@ body {
 }
 
 .umbre-background {
-  background: linear-gradient(87deg, #5e72e4 0, #825ee4 100%) !important;
-  height: 55vh;
+  //background: linear-gradient(87deg, #5e72e4 0, #825ee4 100%) !important;
+  background: linear-gradient(87deg, var(--light-purple) 0, var(--blue) 100%) !important;
+  min-height: 55vh;
 }
