--- a/src/componenets/RoundedElement/RoundedElement.scss
+++ b/src/componenets/RoundedElement/RoundedElement.scss
@@ -1,12 +1,9 @@
 .rounded-table {
-  font-family: "Open Sans", sans-serif;
+  position: relative;
   display: flex;
-  width: fit-content;
-  padding: .5em;
   flex-direction: column;
-  min-width: 0;
   word-wrap: break-word;
-  border: 1px solid black;
+  border: 1px solid #8898aa26;
   border-radius: .375rem;
   background-color: #fff;
   background-clip: border-box;
