--- a/src/componenets/Table/Table.scss
+++ b/src/componenets/Table/Table.scss
@@ -1,13 +1,42 @@
 .table {
 
-  .title {
-    color: #32325d;
-    font-weight: 500;
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-    margin-left: 1em;
-    display: block;
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
+    .title {
+      color: #32325d;
+      font-weight: 500;
+      margin-top: 1.5em;
+      margin-bottom: 1.5em;
+      margin-left: 1em;
+      display: block;
+    }
+
+    .navigation-button-wrapper {
+      padding-right: 1.25em;
+
+      .navigation-button {
+        font-weight: 600;
+        line-height: 1.5;
+        display: inline-block;
+        padding: .625rem 1.25rem;
+        cursor: pointer;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        text-align: center;
+        vertical-align: middle;
+        color: white;
+        border: 1px solid #5e72e4;
+        border-radius: .25rem;
+        background-color: #5e72e4;
+        font-size: .75rem;
+        box-shadow: 0 4px 6px #32325d1c, 0 1px 3px #00000014;
+      }
+    }
   }
 
   table {
