--- a/src/componenets/Page/Page.scss
+++ b/src/componenets/Page/Page.scss
@@ -42,8 +42,7 @@ main {
 
     .umbre-background {
       padding-top: .5em;
-      min-height: 30vh;
-      padding-left: .25em;
+      min-height: 22vh;
       color: white;
       display: flex;
       flex-direction: column;
@@ -52,8 +51,10 @@ main {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-left: 1.5em;
-        margin-right: 1.5em;
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+        border-bottom: solid 1px #6b7de6;
+        padding-bottom: .75em;
 
         h1 {
           font-size: 2em;
@@ -68,7 +69,7 @@ main {
       .top-content {
         margin-top: auto;
         margin-bottom: 5em;
-        margin-left: 1em;
+        margin-left: 1.25em;
         margin-right: 1em;
       }
     }
