Commit progress for now

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,4 +29,9 @@
   --buton-blue: #1e73cd;
   --buton-yellow: #cdbc1e;
   --button-gray: #bbbbbb;
+
+  --warning-error: #fb6340;
+  --warning-ok: #2dce89;
+  --warning-warning: #d6d70f;
+  --warning-info: #11cdef;
 }
