--- a/src/componenets/Page/Page.scss
+++ b/src/componenets/Page/Page.scss
@@ -59,6 +59,7 @@ main {
         padding-right: 1.5em;
         border-bottom: solid 1px var(--header-border-bottom);
         padding-bottom: .75em;
+        margin-bottom: 1em;
 
         h1 {
           font-size: 2em;
