--- a/src/componenets/TextWithActions/TextWithActions.scss
+++ b/src/componenets/TextWithActions/TextWithActions.scss
@@ -2,4 +2,53 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-right: 1.25em;
+
+  .actions-wrapper {
+    position: relative;
+
+    .title {
+      text-decoration: underline;
+    }
+
+    .menu {
+      position: absolute;
+    }
+
+    ul {
+      padding: 0;
+      margin-top: .25em;
+      border: solid 1px #fafafa;
+      z-index: 1;
+      box-shadow: 0 4px 6px #32325d1c, 0 1px 3px #00000014;
+      display: none;
+
+      li {
+        list-style-type: none;
+        padding-right: .5em;
+        padding-left: .5em;
+        padding-bottom: .5em;
+        font-size: .85em;
+
+        a {
+          text-decoration: none;
+          color: black;
+        }
+
+        &:not(first) {
+          padding-top: .25em;
+        }
+
+        &:hover {
+          background: #fafafa;
+        }
+      }
+    }
+
+    &:hover {
+      ul {
+        display: block;
+      }
+    }
+  }
 }
