--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,10 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+.App {
+  height: 100vh;
+}
+
 * {
   margin-block-start: 0;
   margin-block-end: 0;
