--- a/src/componenets/Pager/Pager.scss
+++ b/src/componenets/Pager/Pager.scss
@@ -30,8 +30,12 @@
         box-shadow: 0 7px 14px #32325d1a, 0 3px 6px #00000014;
       }
 
-      &:not(.active):hover {
+      &.item:not(.active):hover {
         background: #dee2e6;
+        cursor: pointer;
+      }
+
+      &.arrows {
         cursor: pointer;
       }
     }
