Finsihing with the elements

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -32,7 +32,7 @@
 
   --warning-error: #fb6340;
   --warning-ok: #2dce89;
-  --warning-warning: #d6d70f;
+  --warning-warning: #e29c5b;
   --warning-info: #11cdef;
 
   --header-border-bottom: #6b7de6;
