--- a/src/componenets/Page/Page.scss
+++ b/src/componenets/Page/Page.scss
@@ -26,14 +26,41 @@ main {
     nav {
       padding-top: .5em;
       padding-left: .2em;
+      font-size: .85em;
 
-      ul {
+      .side-menu {
         padding: 0;
 
         li {
           list-style-type: none;
           margin: .5em;
-          font-weight: 300;
+          padding: .75em;
+          color: #00000099;
+
+          .svg-inline--fa {
+            padding-right: 1.5em;
+          }
+
+          .icon-home {
+            color: #5e72e4;
+          }
+
+          .icon-users {
+            color: #fb6340;
+          }
+
+          .icon-files {
+            color: #ffd600;
+          }
+
+          .icon-analytics {
+            color: #11cdef;
+          }
+
+          &.active {
+            background: #f6f9fc;
+            color: #525f7f;
+          }
         }
       }
     }
