--- a/src/componenets/Page/Page.scss
+++ b/src/componenets/Page/Page.scss
@@ -36,9 +36,26 @@ main {
           margin: .5em;
           padding: .75em;
           color: #00000099;
+          display: flex;
+
+          a {
+            color: inherit;
+            text-decoration: none;
+            display: flex;
+            flex-direction: row;
+
+            .icon-wrapper {
+              width: 3em;
+            }
+          }
 
           .svg-inline--fa {
             padding-right: 1.5em;
+          }
+
+          .icon {
+            width: 3em;
+            display: block
           }
 
           .icon-home {
