--- a/src/componenets/TextWithActions/TextWithActions.scss
+++ b/src/componenets/TextWithActions/TextWithActions.scss
@@ -10,7 +10,7 @@
     padding: .5em;
     border: solid 1px white;
 
-    .title {
+    .action-title {
       .svg-inline--fa {
         padding-left: .25em;
         color: #7e8db6;
