--- a/src/componenets/RoundedElement/RoundedElement.scss
+++ b/src/componenets/RoundedElement/RoundedElement.scss
@@ -8,4 +8,13 @@
   background-color: #fff;
   background-clip: border-box;
   margin-bottom: 2em;
+
+  .title {
+    color: #32325d;
+    font-weight: 500;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    margin-left: 1em;
+    display: block;
+  }
 }
