--- a/src/componenets/Table/Table.scss
+++ b/src/componenets/Table/Table.scss
@@ -26,6 +26,7 @@
         background-color: #5e72e4;
         font-size: .75rem;
         box-shadow: 0 4px 6px #32325d1c, 0 1px 3px #00000014;
+        text-decoration: none;
       }
     }
   }
@@ -66,6 +67,10 @@
 
           &:first-child {
             padding-left: 2em;
+          }
+
+          &.empty-row {
+            text-align: center;
           }
         }
       }
